2003-11-27  Alexandre Oliva  <aoliva@redhat.com>

	* gas/frv/reloc1.[sd]: Test references to external symbols and
	inter-section references too.

2003-11-26  Christian Groessler  <chris@groessler.org>

	* gas/z8k/jmp-cc.d: New file.
	* gas/z8k/jmp-cc.s: New file.
	* gas/z8k/ret-cc.d: New file.
	* gas/z8k/ret-cc.s: New file.
	* gas/z8k/z8k.exp: Run new tests.

2003-11-26  Nick Clifton  <nickc@redhat.com>

	* gas/h8300/t01_mov.s: Revert changes.
	* gas/h8300/t01_mov.exp: Revert changes.

2003-11-25  Asgari Jinia  <asgarij@kpitcummins.com>

	* gas/h8300/multiples.s : Add instructions for H8s.
	* gas/h8300/h8300.exp (do_h8300s_multiple) : Add more test
	conditions for instructions for H8s.
	* gas/h8300/t01_mov.s: Correct illegal ldm/stm register pairings.
	* gas/h8300/t01_mov.exp: Update expected results.

2003-11-22  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/divide.s: New.
	* gas/i386/divide.d: New.
	* gas/i386/i386.exp (gas_32_check): Run it.

	* gas/ppc/machine.s: New.
	* gas/ppc/machine.d: New.
	* gas/ppc/ppc.exp: Run it.

2003-11-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* gas/mips/lca-svr4pic.d: New test for the "lca" macro.
	* gas/mips/lca-xgot.d: Likewise.
	* gas/mips/lca.s: Source for the new tests.
	* gas/mips/mips.exp: Run the new tests.

2003-11-14  Nick Clifton  <nickc@redhat.com>

	* gas/arm/arm7.d: Pass -D instead of -d to objdump in order to
        display the contents of data fields in the .text section.
        This change is necessary after the addition of arm elf mapping
        symbol support to gas.
        * gas/arm/pic.d: Expect addresses with function name offsets.
        This change is necessary after the addition of arm elf mapping
        symbol support to gas.
        
2003-11-13  Nick Clifton  <nickc@redhat.com>

	* gas/arm/mapping.s: New test: Source for ARM ELF mapping
	symbols test.
	* gas/arm/mapping.d: New file: Expected output.
	* gas/arm/arm.exp: Run new test.

2003-11-06  Nick Clifton  <nickc@redhat.com>
