@@ -35,9 +35,9 @@ Contents of section \.cranges:
  0020 001c0000 00200001 00000000 00000024  .*
  0030 00030000 00240000 00280001 0000004c  .*
  0040 000000e8 00020000 01340000 002c0003  .*
- 0050 00000160 0000001a 00010000 00080000  .*
+ 0050 00000160 0000001c 00010000 00080000  .*
  0060 000c0001 00000018 0000000e 00020000  .*
- 0070 003c0000 007e0002 0000017a 00000156  .*
+ 0070 003c0000 00800002 0000017c 00000154  .*
  0080 0002                                 .*
 Contents of section \.text\.codemix:
  0000 cc00aad0 6ff0fff0 6ff0fff0 cc0062e0  .*
@@ -47,7 +47,7 @@ Contents of section \.text\.codemixconst:
  0000 6ff0fff0 cc00aad0 6ff0fff0 6ff0fff0  .*
  0010 cc00e2e0 6ff0fff0 6ff0fff0 6ff0fff0  .*
  0020 6ff0fff0 6ff00000 0000fff0 6ff0fff0  .*
- 0030 6ff0fff0 00000000 000000b1 0009e02b  .*
+ 0030 6ff0fff0 00000000 000000b3 0009e02b  .*
  0040 00090009 89020009 00090009 00090000  .*
  0050 00000000 00000000 00000000 00000000  .*
  0060 00000000 00000000 00000000 00000000  .*
@@ -55,7 +55,7 @@ Contents of section \.text\.codemixconst:
  0080 00000000 00000000 00000000 00000000  .*
  0090 00000000 00000000 00000000 00000000  .*
  00a0 00000000 00000000 00000000 00000000  .*
- 00b0 00000000 00000000 007c               .*
+ 00b0 00000000 00000000 0000007e           .*
 Contents of section \.text\.codemixconst2:
  0000 6ff0fff0 cc00aad0 6ff0fff0 6ff0fff0  .*
  0010 6ff0fff0 6ff0fff0 6ff0fff0 6ff0fff0  .*
@@ -78,11 +78,11 @@ Contents of section \.text\.codemixconst2:
  0120 00000000 00000000 00000000 00000000  .*
  0130 000000e6 6ff0fff0 cc00aed0 6ff0fff0  .*
  0140 6ff0fff0 6ff0fff0 6ff0fff0 6ff0fff0  .*
- 0150 6ff0fff0 6ff0fff0 6ff0fff0 cc010ae0  .*
+ 0150 6ff0fff0 6ff0fff0 6ff0fff0 cc0112e0  .*
  0160 6ff0fff0 00000000 00000000 00000000  .*
- 0170 00000000 00000000 00420009 e00e0009  .*
- 0180 0009890a 00090009 00090009 00090009  .*
- 0190 00090009 00090009 00090009 00000000  .*
+ 0170 00000000 00000000 00000044 0009e00e  .*
+ 0180 00090009 890a0009 00090009 00090009  .*
+ 0190 00090009 00090009 00090009 00090000  .*
  01a0 00000000 00000000 00000000 00000000  .*
  01b0 00000000 00000000 00000000 00000000  .*
  01c0 00000000 00000000 00000000 00000000  .*
@@ -101,4 +101,4 @@ Contents of section \.text\.codemixconst2:
  0290 00000000 00000000 00000000 00000000  .*
  02a0 00000000 00000000 00000000 00000000  .*
  02b0 00000000 00000000 00000000 00000000  .*
- 02c0 00000000 00000000 00000000 00000154  .*
+ 02c0 00000000 00000000 00000000 00000152  .*
