@@ -39,10 +39,10 @@ Contents of section \.cranges:
  0030 00020000 00000000 00240003 00000024  .*
  0040 00000028 00010000 004c0000 00160002  .*
  0050 00000062 000000d2 00010000 01340000  .*
- 0060 002c0003 00000160 0000001a 00010000  .*
- 0070 017a0000 00220002 00000008 0000000c  .*
+ 0060 002c0003 00000160 0000001c 00010000  .*
+ 0070 017c0000 00220002 00000008 0000000c  .*
  0080 00010000 00180000 000e0002 0000004e  .*
- 0090 0000006c 00010000 019c0000 01340001  .*
+ 0090 0000006e 00010000 019e0000 01320001  .*
 Contents of section \.text\.codemix:
  0000 cc00aad0 6ff0fff0 6ff0fff0 cc0062e0  .*
  0010 6ff0fff0 6ff0fff0 0009e028 00090009  .*
@@ -51,7 +51,7 @@ Contents of section \.text\.codemixconst:
  0000 6ff0fff0 cc00aad0 6ff0fff0 6ff0fff0  .*
  0010 cc00e2e0 6ff0fff0 6ff0fff0 6ff0fff0  .*
  0020 6ff0fff0 6ff00000 0000fff0 6ff0fff0  .*
- 0030 6ff0fff0 00000000 000000b1 0009e02b  .*
+ 0030 6ff0fff0 00000000 000000b3 0009e02b  .*
  0040 00090009 89020009 00090009 00090000  .*
  0050 00000000 00000000 00000000 00000000  .*
  0060 00000000 00000000 00000000 00000000  .*
@@ -59,7 +59,7 @@ Contents of section \.text\.codemixconst:
  0080 00000000 00000000 00000000 00000000  .*
  0090 00000000 00000000 00000000 00000000  .*
  00a0 00000000 00000000 00000000 00000000  .*
- 00b0 00000000 00000000 007c               .*
+ 00b0 00000000 00000000 0000007e           .*
 Contents of section \.text\.codemixconst2:
  0000 6ff0fff0 cc00aad0 6ff0fff0 6ff0fff0  .*
  0010 6ff0fff0 6ff0fff0 6ff0fff0 6ff0fff0  .*
@@ -82,11 +82,11 @@ Contents of section \.text\.codemixconst2:
  0120 00000000 00000000 00000000 00000000  .*
  0130 000000e6 6ff0fff0 cc00aed0 6ff0fff0  .*
  0140 6ff0fff0 6ff0fff0 6ff0fff0 6ff0fff0  .*
- 0150 6ff0fff0 6ff0fff0 6ff0fff0 cc010ae0  .*
+ 0150 6ff0fff0 6ff0fff0 6ff0fff0 cc0112e0  .*
  0160 6ff0fff0 00000000 00000000 00000000  .*
- 0170 00000000 00000000 00420009 e00e0009  .*
- 0180 0009890a 00090009 00090009 00090009  .*
- 0190 00090009 00090009 00090009 00000000  .*
+ 0170 00000000 00000000 00000044 0009e00e  .*
+ 0180 00090009 890a0009 00090009 00090009  .*
+ 0190 00090009 00090009 00090009 00090000  .*
  01a0 00000000 00000000 00000000 00000000  .*
  01b0 00000000 00000000 00000000 00000000  .*
  01c0 00000000 00000000 00000000 00000000  .*
@@ -105,4 +105,4 @@ Contents of section \.text\.codemixconst2:
  0290 00000000 00000000 00000000 00000000  .*
  02a0 00000000 00000000 00000000 00000000  .*
  02b0 00000000 00000000 00000000 00000000  .*
- 02c0 00000000 00000000 00000000 00000154  .*
+ 02c0 00000000 00000000 00000000 00000152  .*
