@@ -26,5 +26,5 @@ OFFSET  *TYPE  *VALUE
 
 Contents of section \.text:
  0000 00090009 00090009 00090009 00090009  .*
- 0010 00000004 00000004 0000000c 1234      .*
+ 0010 00000004 00000004 0000000c 12340009  .*
 
